added auditing, openApi client to restControllers
