# file-storage-service/src/main/java/com/yana/filestorage/rest/FileRestController.java
@@ -1,19 +1,21 @@
 package com.yana.filestorage.rest;
 
+import com.yana.filestorage.api.client.FilesApi;
 import com.yana.filestorage.exception.FileActionException;
 import com.yana.filestorage.service.FileService;
 import com.yana.filestorage.service.MinioService;
 import com.yana.filestorage.service.TokenExtractor;
-import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.jetbrains.annotations.NotNull;
-import org.springframework.http.HttpStatus;
+import org.springframework.core.io.InputStreamResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.FileCopyUtils;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -24,19 +26,18 @@ import java.util.UUID;
 @RequestMapping("/files")
 @AllArgsConstructor
 @Slf4j
-public class FileRestController {
+public class FileRestController implements FilesApi {
 
     private final FileService fileService;
     private final MinioService minioService;
     private final TokenExtractor tokenExtractor;
 
-    @Transactional
-    @PostMapping("/upload")
-    public ResponseEntity<Void> uploadFile(@RequestParam String name,
-                                           @RequestParam @NotNull MultipartFile file,
-                                           @RequestParam(name = "directory_id", required = false) Long directoryId,
-                                           HttpServletRequest request) {
-        var user = tokenExtractor.extractFromRequest(request);
+    @Override
+    public ResponseEntity<Void> uploadFile(String authorization,
+                                           String name,
+                                           MultipartFile file,
+                                           Long directoryId) {
+        var user = tokenExtractor.extractFromHeader(authorization);
 
         log.info("[FileController] Uploading file '{}' for user {}", name, user.getUserId());
         long fileId = fileService.save(name, directoryId, user.getUserId());
@@ -44,50 +45,54 @@ public class FileRestController {
         minioService.save(uuid, file);
 
         log.info("[Response] with saved data");
-        return new ResponseEntity<>(HttpStatus.OK);
+        return ResponseEntity.ok().build();
     }
 
-    @GetMapping("/find")
-    public void findFile(@RequestParam Long fileId,
-                         HttpServletRequest request,
-                         HttpServletResponse response) {
-        var user = tokenExtractor.extractFromRequest(request);
+    @Override
+    public ResponseEntity<Resource> findFile(String authorization,
+                                             Long fileId) {
+        var user = tokenExtractor.extractFromHeader(authorization);
         fileService.ensureFileOwnership(fileId, user.getUserId());
 
         log.info("[Request] Finding file {} for user {}", fileId, user.getUserId());
-        try (InputStream stream = fileService.download(fileId)) {
-            response.setHeader("Content-Disposition", "attachment");
-            response.setStatus(HttpServletResponse.SC_OK);
-            FileCopyUtils.copy(stream, response.getOutputStream());
-        } catch (IOException e) {
-            throw new FileActionException(e.getMessage());
-        }
+        InputStream stream = fileService.download(fileId);
+        Resource resource = new InputStreamResource(stream) {
+            @Override
+            public long contentLength() {
+                return -1;
+            }
+        };
+
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"file\"")
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .body(resource);
     }
 
-    @DeleteMapping("/delete")
-    public ResponseEntity<Void> deleteFile(@RequestParam("id") Long fileId,
-                                           HttpServletRequest request) {
-        var user = tokenExtractor.extractFromRequest(request);
-        fileService.ensureFileOwnership(fileId, user.getUserId());
-
-        log.info("[Request] Deleting file {} for user {}", fileId, user.getUserId());
-        minioService.delete(fileService.find(fileId));
-        fileService.delete(fileId);
-        return new ResponseEntity<>(HttpStatus.OK);
-    }
-
-    @PutMapping("/rename")
-    public ResponseEntity<Void> renameFile(@RequestParam Long fileId,
-                                           @RequestParam String newName,
-                                           HttpServletRequest request) {
-        var user = tokenExtractor.extractFromRequest(request);
+    @Override
+    public ResponseEntity<Void> renameFile(String authorization,
+                                           Long fileId,
+                                           String newName) {
+        var user = tokenExtractor.extractFromHeader(authorization);
         fileService.ensureFileOwnership(fileId, user.getUserId());
 
         log.info("[Request] renaming file with id {} to '{} for user {}'", fileId, newName, user.getUserId());
         fileService.renameFile(fileId, newName);
 
         log.info("[Response] file renamed successfully");
-        return new ResponseEntity<>(HttpStatus.OK);
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteFile(String authorization,
+                                           Long fileId) {
+        var user = tokenExtractor.extractFromHeader(authorization);
+        fileService.ensureFileOwnership(fileId, user.getUserId());
+
+        log.info("[Request] Deleting file {} for user {}", fileId, user.getUserId());
+        minioService.delete(fileService.find(fileId));
+        fileService.delete(fileId);
+        return ResponseEntity.ok().build();
     }
 
 }
